[gd_scene load_steps=13 format=3 uid="uid://cjvru2lw8xxn"]

[ext_resource type="Script" path="res://Scripts/Utility/upgrade.gd" id="1_wimt5"]
[ext_resource type="Texture2D" uid="uid://qw5aqary6m1l" path="res://Assets/Sprites/Background/upgrade_background.png" id="2_d5os3"]
[ext_resource type="Texture2D" uid="uid://c8o2ivwhmfk6e" path="res://Assets/Sprites/Background/upgrade_foreground.png" id="3_4xkp6"]
[ext_resource type="Theme" uid="uid://ch1o7i2nn8mwc" path="res://Assets/Sprites/GUI/upgrade_buttons.tres" id="4_065f3"]
[ext_resource type="FontFile" uid="uid://cvimckk41jee1" path="res://Assets/Sprites/GUI/Pixelme.ttf" id="5_ykpjy"]

[sub_resource type="Animation" id="Animation_bqs1f"]
length = 0.001

[sub_resource type="Animation" id="Animation_3mbyh"]
resource_name = "background"
length = 1.96
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.28, 0.56, 0.84, 1.12, 1.4, 1.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 2), Vector2i(0, 5), Vector2i(0, 4), Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_g34st"]
resource_name = "stand_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxold"]
_data = {
"RESET": SubResource("Animation_bqs1f"),
"background": SubResource("Animation_3mbyh"),
"stand_up": SubResource("Animation_g34st")
}

[sub_resource type="Animation" id="Animation_3n7o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_v2dem"]
resource_name = "stand_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8w6v6"]
_data = {
"RESET": SubResource("Animation_3n7o0"),
"stand_up": SubResource("Animation_v2dem")
}

[node name="Upgrade" type="Node2D"]
script = ExtResource("1_wimt5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(800, 450)
texture = ExtResource("2_d5os3")
vframes = 10

[node name="Foreground" type="Sprite2D" parent="."]
position = Vector2(800, 450)
texture = ExtResource("3_4xkp6")
vframes = 3

[node name="SwordUpgradeButton" type="Button" parent="."]
offset_left = 23.0
offset_top = 25.0
offset_right = 666.0
offset_bottom = 156.0
focus_mode = 0
theme = ExtResource("4_065f3")
theme_override_font_sizes/font_size = 50
text = "Sword Crit Chance: 0%"

[node name="AxeUpgradeButton" type="Button" parent="."]
offset_left = 18.0
offset_top = 228.0
offset_right = 620.0
offset_bottom = 343.0
focus_mode = 0
theme = ExtResource("4_065f3")
theme_override_font_sizes/font_size = 50
text = "Axe Crit Chance: 0%"

[node name="SpearUpgradeButton" type="Button" parent="."]
offset_left = 675.0
offset_top = 199.0
offset_right = 1350.0
offset_bottom = 331.0
focus_mode = 0
theme = ExtResource("4_065f3")
theme_override_font_sizes/font_size = 50
text = "Spear Crit Chance: 0%"

[node name="HealthUpgradeButton" type="Button" parent="."]
offset_left = 515.0
offset_top = 373.0
offset_right = 1005.0
offset_bottom = 493.0
focus_mode = 0
theme = ExtResource("4_065f3")
theme_override_font_sizes/font_size = 50
text = "Extra Health: +0"

[node name="ContinueButton" type="Button" parent="."]
offset_left = 218.0
offset_top = 502.0
offset_right = 526.0
offset_bottom = 610.0
focus_mode = 0
theme = ExtResource("4_065f3")
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="Exp" type="Label" parent="."]
offset_left = 1333.0
offset_top = 39.0
offset_right = 1563.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("5_ykpjy")
theme_override_font_sizes/font_size = 70
text = "Exp: 0"

[node name="Background_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxold")
}
autoplay = "stand_up"

[node name="Foreground_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8w6v6")
}

[connection signal="pressed" from="SwordUpgradeButton" to="." method="_on_sword_upgrade_pressed"]
[connection signal="pressed" from="AxeUpgradeButton" to="." method="_on_axe_upgrade_button_pressed"]
[connection signal="pressed" from="SpearUpgradeButton" to="." method="_on_spear_upgrade_button_pressed"]
[connection signal="pressed" from="HealthUpgradeButton" to="." method="_on_health_upgrade_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
